--- a/dcl-envir.yml
+++ b/dcl-envir.yml
@@ -1,16 +1,12 @@
 name: dcl-envir
 dependencies:
   - python=3.7
-  - torch=1.7.*
-  - torchvision=0.8.*
-  - numpy=1.19.*
-  - scikit-learn=0.24.*
-  - torchsummary
+  - scikit-learn==0.24.*
   - matplotlib
   - pip:
-    - torch=1.7.*
-    - torchvision=0.8.*
-    - numpy=1.19.*
+    - torch==1.8.*
+    - torchvision==0.9.*
+    - numpy==1.19.*
     - torchsummary
     
 prefix: /Users/username/anaconda3/envs/env-name
